# dtlc.rs

./: .gitignore  Cargo.toml  README.md
benches/: church.rs  stlc_church.rs
examples/: church.rs  stlc_church.rs
src/dtlc/: lib.rs
src/dtlc/core/lang/: mod.rs
src/dtlc/core/lang/eff/: syntax.rs
src/dtlc/core/lang/stlc/: domain.rs  mod.rs  normal.rs  syntax.rs
src/dtlc/parse/: stlc.rs
src/dtpl/: lib.rs
src/dtpl/core/: domain.rs  eval.rs  mod.rs  model.rs  normal.rs  syntax.rs
src/dtpl/parse/: mod.rs  parse.rs
src/selib/: lib.rs
tests/: church.rs  stlc_church.rs  test.rs
