[package]

name    = "rust-simple-dtpl"
version = "0.0.1"
authors = [ "Darin Morrison <darinmorrison+rust@gmail.com>" ]

[profile.dev]
debug = false

[lib]
name = "dtpl"
path = "src/dtpl/lib.rs"

[[bin]]
name = "dtpl"
doc  = false
test = false

[dependencies.docopt]
git = "https://github.com/docopt/docopt.rs"

[dependencies.docopt_macros]
git = "https://github.com/docopt/docopt.rs"

[dependencies.peg]
git = "https://github.com/kevinmehall/rust-peg"

[dev-dependencies.quickcheck]
git = "https://github.com/BurntSushi/quickcheck"

[dev-dependencies.quickcheck_macros]
git = "https://github.com/BurntSushi/quickcheck"
