[package]

name    = "dtlc"
version = "0.0.1"
authors = [ "Darin Morrison <darinmorrison+rust@gmail.com>" ]

[profile.dev]
debug = false

[lib]
name = "dtlc"
path = "src/dtlc/lib.rs"

[[bin]]
name = "dtlc"
doc  = false
test = false

[dependencies.docopt]
git = "https://github.com/docopt/docopt.rs"

[dependencies.docopt_macros]
git = "https://github.com/docopt/docopt.rs"

[dependencies.peg]
git = "https://github.com/kevinmehall/rust-peg"

[dependencies.pretty]
git = "https://github.com/jonsterling/rust-pretty"

[dev-dependencies.quickcheck]
git = "https://github.com/BurntSushi/quickcheck"

[dev-dependencies.quickcheck_macros]
git = "https://github.com/BurntSushi/quickcheck"
